# dcdfg-fork

./: README.md  pyproject.toml  requirements.txt
dcdfg/: simulation_data.py
dcdfg/train/: __init__.py  train_dcdfg.py
